--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -4375,11 +4375,16 @@
     "**Interpretasi Hasil Performance Comparison**\n",
     "***\n",
     "Model mengalami peningkatan performa (nilai RMSE, MAE & MAPE berkurang) dengan dilakukannya hyperparameter tuning, walaupun hanya sedikit (kurang dari 6 persen).\n",
+    "\n",
+    "<center>\n",
+    "\n",
     "| Metrics | XGBoost (Before Tuning) | XGBoost (After Tuning) | Decrease Percentage|\n",
     "|---------|-------------------------|------------------------|--------------|\n",
     "| RMSE    | 42.037373               | 39.900587              | ↓5.08%    |\n",
     "| MAE     | 25.642264               | 24.23665               | ↓5.48%    |\n",
     "| MAPE    | 0.255405                | 0.243843               | ↓4.52%    |\n",
+    "\n",
+    "</center>\n",
     "\n",
     "Berdasarkan *scatter plot* di atas, secara overall hasil prediksi sudah cukup baik namun masih terdapat beberapa hasil prediksi yang sedikit menyimpang baik lebih tinggi (overestimation) atau lebih rendah (underestimation)."
    ]
@@ -4769,13 +4774,18 @@
    "metadata": {},
    "source": [
     "**Top 5 Underestimation Prediction**\n",
+    "\n",
+    "<center>\n",
+    "\n",
     "| Date                           | Actual Demand | Model Prediction | Deviation | Event                                                                                                                                                                                                                                                                                                                                       |\n",
     "|--------------------------------|---------------|------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
     "| Senin, 16 April 2012 (7 AM)    | 387           | 91               | -296      | [Pembukaan Kembali Institut Politeknik Virginia Setelah 1 Tahun Tutup Karena Kasus Pembunuhan Masal]( https://www.washingtonpost.com/blogs/campus-overload/post/va-tech-marks-massacre-anniversary-by-returning-to-class/2012/04/16/gIQAesOQLT_blog.html ) |\n",
     "| Senin, 26 November 2012 (8 AM) | 638           | 345              | -293      |  [Hari Kerja Pertama (Senin) Setelah Libur Panjang (Thanksgiving 22 Nov & Black Friday 23 Nov)](https://learnenglish.britishcouncil.org/general-english/magazine-zone/black-friday-buy-nothing-day#:~:text=Black%20Friday%20is%20the%20day,to%20start%20shopping%20for%20Christmas.)                                                                                                                                                                                                                                                                                                                                           |\n",
     "| Jumat, 14 Desember 2012 (8 AM) | 636           | 351              | -285      | [Penembakan Masal di Sekolah Dasar Sandy Hook Jumat Pagi](https://www.washingtonpost.com/politics/sandy-hook-elementary-school-shooting-leaves-students-staff-dead/2012/12/14/24334570-461e-11e2-8e70-e1993528222d_story.html)                                                                                                       |\n",
     "| Selasa, 6 November 2012 (8 AM) | 588           | 319              | -269      | [Pemilihan Umum Presiden Amerika Serikat Periode 2012 - 2017](https://id.wikipedia.org/wiki/Pemilihan_umum_Presiden_Amerika_Serikat_2012)                                                                                                                                                                                            |\n",
-    "| Rabu, 21 Maret 2012 (8 AM)     | 535           | 282              | -253      | [Festival Bunga Sakura Nasional](https://abcnews.go.com/blogs/headlines/2012/03/cherry-blossom-festival-2012-centennial-celebration-of-cherry-tree-arrival-washington-d-c)                                                                                                                                                         |"
+    "| Rabu, 21 Maret 2012 (8 AM)     | 535           | 282              | -253      | [Festival Bunga Sakura Nasional](https://abcnews.go.com/blogs/headlines/2012/03/cherry-blossom-festival-2012-centennial-celebration-of-cherry-tree-arrival-washington-d-c)                                                                                                                                                         |\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -4783,13 +4793,18 @@
    "metadata": {},
    "source": [
     "**Top 5 Overestimation Prediction**\n",
+    "\n",
+    "<center>\n",
+    "\n",
     "| Date                            | Actual Demand | Model Prediction | Deviation | Event                                                                                                                                                                                                                                           |\n",
     "|---------------------------------|---------------|------------------|-----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
     "| Minggu, 19 Agustus 2012 (15 PM) | 276           | 490              | 214       | [Gempa di Off Coast Washington D.C 5.2 SR Jam 8 Pagi](https://earthquakescanada.nrcan.gc.ca/recent/2012/20120819.0807/index-en.php)                                                                                                             |\n",
     "| Rabu, 21 November 2012 (17 PM)  | 374           | 593              | 219       | [Thanksgiving Eve (H-1 Thanksgiving Day)](https://www.calendardate.com/thanksgiving_2012.htm)                                                                                                                                                   |\n",
     "| Minggu, 28 Oktober 2012 (15 PM) | 301           | 523              | 222       | [Badai Sandy di Washington D.C](https://www.washingtonpost.com/blogs/capital-weather-gang/post/hurricane-sandy-and-washington-dc-detailed-storm-timeline-maps-and-frequent-questions/2012/10/28/2c24af1a-2127-11e2-ac85-e669876c6a24_blog.html) |\n",
     "| Rabu, 18 Juli 2012 (17 PM)      | 370           | 607              | 237       | [Final Major League Baseball di Great American Ball Park First Pitch Jam 19 PM](https://www.mlb.com/gameday/d-backs-vs-reds/2012/07/18/319093/final/box )                                                                                       |\n",
-    "| Kamis, 16 Juni 2011 (17 PM)     | 272           | 511              | 239       | [Di Data Tertulis Cuaca Kabut (Mist), Aslinya Hujan Gerimis (Light Rain)]()                                                                                                                                                                                        |"
+    "| Kamis, 16 Juni 2011 (17 PM)     | 272           | 511              | 239       | [Di Data Tertulis Cuaca Kabut (Mist), Aslinya Hujan Gerimis (Light Rain)]()                                                                                                                                                                                        |\n",
+    "\n",
+    "</center>"
    ]
   },
   {
