--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -4845,12 +4845,15 @@
     "</center>\n",
     "\n",
     "- Metrik evaluasi yang digunakan pada model ini adalah nilai RMSE, MAE & MAPE. Tidak menggunakan R-squared karena model akhir bukan model linear.\n",
+    "- Model mengalami peningkatan performa (nilai RMSE, MAE & MAPE berkurang) dengan dilakukannya hyperparameter tuning, walaupun hanya sedikit (kurang dari 6 persen).\n",
     "\n",
     "<center>\n",
     "\n",
-    "| Model   | RMSE      | MAE      | MAPE     |\n",
-    "|---------|-----------|----------|----------|\n",
-    "| XGBoost | 39.900587 | 24.23665 | 0.243843 |\n",
+    "| Metrics | XGBoost (Before Tuning) | XGBoost (After Tuning) | Decrease Percentage|\n",
+    "|---------|-------------------------|------------------------|--------------|\n",
+    "| RMSE    | 42.037373               | 39.900587              | ↓5.08%    |\n",
+    "| MAE     | 25.642264               | 24.23665               | ↓5.48%    |\n",
+    "| MAPE    | 0.255405                | 0.243843               | ↓4.52%    |\n",
     "\n",
     "</center>\n",
     "\n",
