--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -3621,11 +3621,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**XGBoost Regressor**\n",
+    "**XGBoost**\n",
     "***\n",
-    "- XGBoost, yang merupakan singkatan dari Extreme Gradient Boosting, adalah library machine learning berbasis decision tree yang ditingkatkan dari model gradient boosting.\n",
-    "- XGBoost menawarkan regularisasi, yang memungkinkan untuk mengontrol overfitting dengan memperkenalkan penalti L1/L2 pada bobot dan bias setiap pohon. Fitur ini tidak tersedia di banyak implementasi gradient boosting lainnya.\n",
-    "- Pada algoritma ini, decision tree dibuat dalam bentuk berurutan (sequential). Bobot memainkan peran penting dalam XGBoost. Bobot diberikan ke semua variabel independen yang kemudian dimasukkan ke dalam decision tree yang memprediksi hasil. Bobot variabel yang diprediksi salah oleh pohon dinaikkan dan variabel ini kemudian dimasukkan ke pohon keputusan kedua. Pengklasifikasi/prediktor individu ini kemudian disatukan untuk memberikan model yang kuat dan lebih tepat. Ini dapat bekerja pada masalah regresi maupun klasifikasi."
+    "XGBoost, singkatan dari \"Extreme Gradient Boosting,\" adalah algoritma pembelajaran mesin yang kuat dan populer yang termasuk dalam kerangka kerja gradient boosting. Algoritma ini dirancang untuk memecahkan masalah regresi dan klasifikasi yang kompleks dengan menggabungkan kekuatan pohon keputusan dan teknik gradient boosting.\n",
+    "\n",
+    "Pada intinya, XGBoost membangun ensemble model prediksi yang lemah, biasanya pohon keputusan, secara berulang. Algoritma ini bekerja dengan memasangkan setiap pohon baru dengan kesalahan atau residu dari pohon sebelumnya, secara bertahap meningkatkan kinerja prediksi keseluruhan. Proses berulang ini meminimalkan kesalahan dengan menyesuaikan bobot dari setiap contoh dalam kumpulan data.\n",
+    "\n",
+    "Fitur utama yang membedakan XGBoost meliputi:\n",
+    "\n",
+    "1. **Regularisasi**: XGBoost menggabungkan teknik regularisasi untuk mencegah overfitting, memastikan bahwa model menggeneralisasi dengan baik ke data baru yang belum pernah dilihat sebelumnya. Ini dicapai dengan memberikan hukuman pada model yang kompleks dan memberikan pentingnya yang lebih tinggi pada pohon yang lebih sederhana dan stabil.\n",
+    "2. **Optimisasi Gradient**: Algoritma ini mengoptimasi model menggunakan teknik gradien descent, secara efisien menemukan solusi terbaik untuk ensemble pohon. Hal ini menyebabkan konvergensi yang lebih cepat dan kinerja yang lebih baik.\n",
+    "3. **Penanganan Missing Value**: XGBoost dapat efektif menangani nilai yang hilang selama tahap pelatihan dan prediksi, mengurangi kebutuhan untuk pra-pemrosesan data yang ekstensif.\n",
+    "4. **Fleksibilitas**: Algoritma ini mendukung berbagai fungsi tujuan dan memungkinkan pengguna untuk mendefinisikan kriteria evaluasi kustom, sehingga dapat disesuaikan dengan berbagai domain masalah.\n",
+    "5. **Feature Importance**: XGBoost memberikan wawasan tentang pentingnya fitur, membantu pengguna memahami variabel mana yang paling berkontribusi pada prediksi model.\n",
+    "\n",
+    "Karena ketangguhannya, efisiensinya, dan kemampuannya dalam menangani kumpulan data yang kompleks, XGBoost telah menjadi algoritma yang sering digunakan dalam kompetisi ilmu data dan aplikasi dunia nyata. Algoritma ini unggul dalam berbagai tugas, seperti memprediksi penjualan, mengklasifikasikan penyakit, deteksi kecurangan, dan lain-lain, menjadikannya alat yang penting untuk tugas-tugas pembelajaran mesin lanjutan."
    ]
   },
   {
@@ -4112,7 +4122,7 @@
    "source": [
     "**Interpretasi Hasil Hyperparameter Tuning**\n",
     "***\n",
-    "- Sebelumnya sudah dilakukan tuning dengan randomize searcg dengan banyak parameter seperti subsample, gamma, colsample_bytree, dan reg_alpha. Namun, hasilnya tidak berbeda jauh jika hanya memakai 3 parameter.\n",
+    "- Sebelumnya sudah dilakukan tuning dengan randomize search dengan banyak parameter seperti subsample, gamma, colsample_bytree, dan reg_alpha. Namun, hasilnya tidak berbeda jauh jika hanya memakai 3 parameter.\n",
     "- Grid search menggunakan 3 parameter diatas juga sudah dilakukan, selain menyita waktu, namun hasilnya juga sama saja tidak berbeda jauh.\n",
     "- Best Parameter yang di dapatkan setelah tuning adalah:\n",
     "  - 'scaler': RobustScaler()\n",
@@ -4775,7 +4785,7 @@
    "source": [
     "**Top 5 Underestimation Prediction**\n",
     "\n",
-    "<center>\n",
+    "<left>\n",
     "\n",
     "| Date                           | Actual Demand | Model Prediction | Deviation | Event                                                                                                                                                                                                                                                                                                                                       |\n",
     "|--------------------------------|---------------|------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
@@ -4785,7 +4795,7 @@
     "| Selasa, 6 November 2012 (8 AM) | 588           | 319              | -269      | [Pemilihan Umum Presiden Amerika Serikat Periode 2012 - 2017](https://id.wikipedia.org/wiki/Pemilihan_umum_Presiden_Amerika_Serikat_2012)                                                                                                                                                                                            |\n",
     "| Rabu, 21 Maret 2012 (8 AM)     | 535           | 282              | -253      | [Festival Bunga Sakura Nasional](https://abcnews.go.com/blogs/headlines/2012/03/cherry-blossom-festival-2012-centennial-celebration-of-cherry-tree-arrival-washington-d-c)                                                                                                                                                         |\n",
     "\n",
-    "</center>"
+    "</left>"
    ]
   },
   {
@@ -4794,7 +4804,7 @@
    "source": [
     "**Top 5 Overestimation Prediction**\n",
     "\n",
-    "<center>\n",
+    "<left>\n",
     "\n",
     "| Date                            | Actual Demand | Model Prediction | Deviation | Event                                                                                                                                                                                                                                           |\n",
     "|---------------------------------|---------------|------------------|-----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
@@ -4804,7 +4814,7 @@
     "| Rabu, 18 Juli 2012 (17 PM)      | 370           | 607              | 237       | [Final Major League Baseball di Great American Ball Park First Pitch Jam 19 PM](https://www.mlb.com/gameday/d-backs-vs-reds/2012/07/18/319093/final/box )                                                                                       |\n",
     "| Kamis, 16 Juni 2011 (17 PM)     | 272           | 511              | 239       | [Di Data Tertulis Cuaca Kabut (Mist), Aslinya Hujan Gerimis (Light Rain)]()                                                                                                                                                                                        |\n",
     "\n",
-    "</center>"
+    "</left>"
    ]
   },
   {
