--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -37,6 +37,7 @@
    "metadata": {},
    "source": [
     "**Context**\n",
+    "***\n",
     "\n",
     "Perusahaan Capital Bikeshare adalah perusahaan yang membuat sistem berbagi sepeda di Washington, D.C. Sistem berbagi sepeda adalah generasi baru persewaan sepeda tradisional di mana seluruh proses, mulai dari keanggotaan hingga persewaan hingga pengembalian, dilakukan secara otomatis. Pengguna dapat dengan mudah menyewa sepeda dari satu lokasi dan mengembalikannya ke lokasi lain menggunakan sistem ini. Saat ini terdapat lebih dari 500 program berbagi sepeda di seluruh dunia, dengan lebih dari 500 ribu sepeda. Sistem ini saat ini mendapatkan popularitas karena pentingnya masalah lalu lintas, lingkungan, dan kesehatan.\n",
     "\n",
@@ -48,6 +49,7 @@
    "metadata": {},
    "source": [
     "**Stakeholders**\n",
+    "***\n",
     "\n",
     "**Tim Operasional** di Perusahaan Capital Bikeshare"
    ]
@@ -57,8 +59,49 @@
    "metadata": {},
    "source": [
     "**Problem Statement**\n",
+    "***\n",
     "\n",
-    "Berbagi sepeda (*bike-sharing*) muncul sebagai sarana transportasi alternatif yang secara komprehensif dapat memperbaiki masalah lingkungan, kemacetan lalu lintas, kualitas hidup yang buruk yang disebabkan oleh sistem transportasi yang berorientasi pada mobil, dan dapat menjamin efek praktis. Namun, meskipun banyak keuntungannya, jumlah kota dan bisnis yang enggan memperkenalkan program sepeda bersama semakin meningkat karena kerugian dari biaya tetap yang tinggi seperti biaya pemasangan atau biaya operasional. Dengan demikian, **prediksi permintaan yang akurat diperlukan untuk pengoperasian program bike sharing yang berkelanjutan**."
+    "Berbagi sepeda (*bike-sharing*) muncul sebagai sarana transportasi alternatif yang secara komprehensif dapat memperbaiki masalah lingkungan, kemacetan lalu lintas, kualitas hidup yang buruk yang disebabkan oleh sistem transportasi yang berorientasi pada mobil, dan dapat menjamin efek praktis. Namun, meskipun banyak keuntungannya, jumlah kota dan bisnis yang enggan memperkenalkan program sepeda bersama semakin meningkat karena kerugian dari biaya tetap yang tinggi seperti biaya pemasangan atau biaya operasional.\n",
+    "\n",
+    "*Perhitungan Biaya Operasional*\n",
+    "\n",
+    "*Asumsi:*\n",
+    "\n",
+    "- *Jumlah Sepeda di Stasiun: 30*\n",
+    "- *Penggunaan Sepeda Tahunan dari Stasiun: 5.000 perjalanan*\n",
+    "- *Biaya Pemeliharaan Tahunan per Sepeda: $150* - [*Sumber*](https://www.businessanalystlearnings.com/business-matters/2022/2/3/how-much-does-it-cost-to-implement-a-bike-share-system-in-2022#:~:text=The%20typical%20fees%20for%20bike,the%20total%20amount%20per%20year.) \n",
+    "- *Frekuensi Redistribusi (Skenario Distribusi Buruk): 2x/Hari*\n",
+    "- *Biaya Redistribusi (Truck Fuel for 10-Hour Rest Period): $20* - [*Sumber*](https://afdc.energy.gov/files/u/publication/hdv_idling_2015.pdf)\n",
+    "\n",
+    "***Skenario** Distribusi Sepeda **Buruk** (Tim Operasional Tidak Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
+    "\n",
+    "1. Biaya Pemeliharaan:\n",
+    "- Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda\n",
+    "- Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500\n",
+    "\n",
+    "2. Biaya Redistribusi:\n",
+    "- Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi\n",
+    "- Total Biaya Redistribusi Tahunan = (2x/Hari) * (365 Hari/Tahun) * $20 = $14,600\n",
+    "\n",
+    "3. Biaya Operasinal:\n",
+    "- Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan\n",
+    "- Total Biaya Operasional = $4,500 + $14,600 = **$19,100**\n",
+    "\n",
+    "***Skenario** Distribusi Sepeda **Baik** (Tim Operasional Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
+    "\n",
+    "1. Biaya Pemeliharaan:\n",
+    "- Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda\n",
+    "- Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500\n",
+    "\n",
+    "2. Biaya Redistribusi:\n",
+    "- Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi\n",
+    "- Total Biaya Redistribusi Tahunan = (1x/Hari) * (365 Hari/Tahun) * $20 = $7,300\n",
+    "\n",
+    "3. Biaya Operasinal:\n",
+    "- Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan\n",
+    "- Total Biaya Operasional = $4,500 + $7,300 = **$11,800**\n",
+    "\n",
+    "Dalam contoh perhitungan, biaya operasional untuk skenario distribusi buruk adalah $19.100, sedangkan biaya operasional untuk skenario distribusi baik adalah $11.800. Skenario distribusi yang buruk masih menimbulkan biaya yang lebih tinggi karena redistribusi sepeda yang lebih sering. Dengan demikian, **prediksi permintaan yang akurat diperlukan untuk pengoperasian program bike sharing yang berkelanjutan**."
    ]
   },
   {
@@ -66,6 +109,7 @@
    "metadata": {},
    "source": [
     "**Goals**\n",
+    "***\n",
     "\n",
     "Berdasarkan permasalahan tersebut, Perusahaan Capital Bikeshare tentu perlu memiliki *tool* yang dapat memprediksi dan membantu Tim Operasional dalam **menentukan jumlah sepeda yang harus disediakan pada waktu tertentu**. Adanya perbedaan pada berbagai fitur yang terdapat pada suatu atribut, seperti suhu, cuaca, dan musim dapat menambah keakuratan prediksi jumlah sepeda.\n",
     "\n",
@@ -77,6 +121,7 @@
    "metadata": {},
    "source": [
     "**Analytic Approach**\n",
+    "***\n",
     "\n",
     "Jadi, kita perlu menganalisis data untuk mengidentifikasi pola di antara fitur-fitur yang ada yang membedakan satu pola sewa dari yang lain. Selanjutnya akan **dibuat model regresi** yang akan membantu perusahaan dalam menyediakan '*tool*' untuk memprediksi jumlah sepeda yang dibutuhkan pada waktu tertentu, yang akan berguna bagi Tim Operasional dalam mengoptimalkan pendistribusian sepeda pada waktu yang tepat sehingga dapat meningkatkan kepuasan pelanggan terhadap sistem."
    ]
@@ -86,6 +131,7 @@
    "metadata": {},
    "source": [
     "**Metric Evaluation**\n",
+    "***\n",
     "\n",
     "Evaluasi  metrik yang akan digunakan adalah RMSE, MAE, dan MAPE.\n",
     "\n",
