--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -73,33 +73,33 @@
     "- *Frekuensi Redistribusi (Skenario Distribusi Buruk): 2x/Hari*\n",
     "- *Biaya Redistribusi (Truck Fuel for 10-Hour Rest Period): $20* - [*Sumber*](https://afdc.energy.gov/files/u/publication/hdv_idling_2015.pdf)\n",
     "\n",
-    "***Skenario** Distribusi Sepeda **Buruk** (Tim Operasional Tidak Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
+    "*Skenario Distribusi Sepeda Buruk (Tim Operasional Tidak Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
     "\n",
-    "1. Biaya Pemeliharaan:\n",
-    "- Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda\n",
-    "- Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500\n",
+    "*1. Biaya Pemeliharaan:*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500*\n",
     "\n",
-    "2. Biaya Redistribusi:\n",
-    "- Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi\n",
-    "- Total Biaya Redistribusi Tahunan = (2x/Hari) * (365 Hari/Tahun) * $20 = $14,600\n",
+    "*2. Biaya Redistribusi:*\n",
+    "- *Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi*\n",
+    "- *Total Biaya Redistribusi Tahunan = (2x/Hari) * (365 Hari/Tahun) * $20 = $14,600*\n",
     "\n",
-    "3. Biaya Operasinal:\n",
-    "- Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan\n",
-    "- Total Biaya Operasional = $4,500 + $14,600 = **$19,100**\n",
+    "*3. Biaya Operasinal:*\n",
+    "- *Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan*\n",
+    "- *Total Biaya Operasional = $4,500 + $14,600 = $19,100*\n",
     "\n",
-    "***Skenario** Distribusi Sepeda **Baik** (Tim Operasional Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
+    "*Skenario Distribusi Sepeda Baik (Tim Operasional Mengetahui Perkiraan Bike Share Demand di Sebuah Stasiun):*\n",
     "\n",
-    "1. Biaya Pemeliharaan:\n",
-    "- Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda\n",
-    "- Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500\n",
+    "*1. Biaya Pemeliharaan:*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500*\n",
     "\n",
-    "2. Biaya Redistribusi:\n",
-    "- Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi\n",
-    "- Total Biaya Redistribusi Tahunan = (1x/Hari) * (365 Hari/Tahun) * $20 = $7,300\n",
+    "*2. Biaya Redistribusi:*\n",
+    "- *Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi*\n",
+    "- *Total Biaya Redistribusi Tahunan = (1x/Hari) * (365 Hari/Tahun) * $20 = $7,300*\n",
     "\n",
-    "3. Biaya Operasinal:\n",
-    "- Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan\n",
-    "- Total Biaya Operasional = $4,500 + $7,300 = **$11,800**\n",
+    "*3. Biaya Operasinal:*\n",
+    "- *Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan*\n",
+    "- *Total Biaya Operasional = $4,500 + $7,300 = $11,800*\n",
     "\n",
     "Dalam contoh perhitungan, biaya operasional untuk skenario distribusi buruk adalah $19.100, sedangkan biaya operasional untuk skenario distribusi baik adalah $11.800. Skenario distribusi yang buruk masih menimbulkan biaya yang lebih tinggi karena redistribusi sepeda yang lebih sering. Dengan demikian, **prediksi permintaan yang akurat diperlukan untuk pengoperasian program bike sharing yang berkelanjutan**."
    ]
