--- a/Final_Bike_Sharing.ipynb
+++ b/Final_Bike_Sharing.ipynb
@@ -77,11 +77,11 @@
     "\n",
     "*1. Biaya Pemeliharaan:*\n",
     "- *Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda*\n",
-    "- *Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = $150 x 30 = $4,500*\n",
     "\n",
     "*2. Biaya Redistribusi:*\n",
-    "- *Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi*\n",
-    "- *Total Biaya Redistribusi Tahunan = (2x/Hari) * (365 Hari/Tahun) * $20 = $14,600*\n",
+    "- *Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi x Biaya Redistribusi*\n",
+    "- *Total Biaya Redistribusi Tahunan = (2x/Hari) x (365 Hari/Tahun) x $20 = $14,600*\n",
     "\n",
     "*3. Biaya Operasinal:*\n",
     "- *Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan*\n",
@@ -91,11 +91,11 @@
     "\n",
     "*1. Biaya Pemeliharaan:*\n",
     "- *Total Biaya Pemeliharaan Tahunan = Biaya Pemeliharaan Tahunan per Sepeda * Jumlah Sepeda*\n",
-    "- *Total Biaya Pemeliharaan Tahunan = $150 * 30 = $4,500*\n",
+    "- *Total Biaya Pemeliharaan Tahunan = $150 x 30 = $4,500*\n",
     "\n",
     "*2. Biaya Redistribusi:*\n",
     "- *Total Biaya Redistribusi Tahunan = Frekuensi Redistribusi * Biaya Redistribusi*\n",
-    "- *Total Biaya Redistribusi Tahunan = (1x/Hari) * (365 Hari/Tahun) * $20 = $7,300*\n",
+    "- *Total Biaya Redistribusi Tahunan = (1x/Hari) x (365 Hari/Tahun) x $20 = $7,300*\n",
     "\n",
     "*3. Biaya Operasinal:*\n",
     "- *Total Biaya Operasional = Total Biaya Pemeliharaan Tahunan + Total Biaya Redistribusi Tahunan*\n",
